Add basic header template
Created the main divs to the header section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="top-header">
+            <div class="logo">
+
+            </div>
+            <div class="links">
+
+            </div> 
+        </div>
+        <div class="header">
+            <div class="left-header">
+                <div class="hero">
+
+                </div>
+                <div class="main-info">
+
+                </div>
+                <button id="signup-1">Sign up</button>
+            </div>
+            <div class="image-header">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
