Add header template content

--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
     <div class="header">
         <div class="top-header">
             <div class="logo">
-
+                Header Logo
             </div>
             <div class="links">
-
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
             </div> 
         </div>
         <div class="header">
             <div class="left-header">
                 <div class="hero">
-
+                    This website is awesome
                 </div>
                 <div class="main-info">
-
+                    This website has some subtext that goes here under the main title. It'a a smaller font and the color is lower contrast
                 </div>
                 <button id="signup-1">Sign up</button>
             </div>
             <div class="image-header">
-
+                this is a placeholder for an image
             </div>
         </div>
     </div>
