Create basic header css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </div> 
         </div>
-        <div class="header">
+        <div class="main-header">
             <div class="left-header">
                 <div class="hero">
                     This website is awesome
