--- a/index.html
+++ b/index.html
@@ -39,5 +39,53 @@
             </div>
         </div>
     </div>
+    <div class="random-info">
+        <div class="title">Some random information</div>
+        <div class="info">
+            <div class="one">
+                <div class="img-1"></div>
+                <div class="text">This is some subtext under and illustration or image</div>
+            </div>
+
+            <div class="one">
+                <div class="img-2"></div>
+                <div class="text">This is some subtext under and illustration or image</div>
+            </div>
+
+            <div class="one">
+                <div class="img-3"></div>
+                <div class="text">This is some subtext under and illustration or image</div>
+            </div>
+
+            <div class="one">
+                <div class="img-4"></div>
+                <div class="text">This is some subtext under and illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quote-content">
+            <p>"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</p>
+        </div>
+        <div class="author">
+            -Thor, God of Thunder
+        </div>
+    </div>
+    <div class="call-sign-up">
+        <div class="banner">
+            <div class="banner-left">
+                <div class="banner-left-1">
+                    Call to action! It's time!
+                </div>
+                <div class="banner-left-2">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <div class="banner-right">
+                <button id="signup-2">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2022</div>
 </body>
 </html>
