--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         <div class="info">
             <div class="one">
                 <div class="img-1"></div>
-                <div class="text">This is some subtext under and illustration or image</div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
 
             <div class="one">
                 <div class="img-2"></div>
-                <div class="text">This is some subtext under and illustration or image</div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
 
             <div class="one">
                 <div class="img-3"></div>
-                <div class="text">This is some subtext under and illustration or image</div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
 
             <div class="one">
                 <div class="img-4"></div>
-                <div class="text">This is some subtext under and illustration or image</div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
